fixing alignment when no flags

--- a/shared/src/main/resources/css/grid/results.css
+++ b/shared/src/main/resources/css/grid/results.css
@@ -13,8 +13,12 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    flex-wrap: no-wrap;
+    /* move to top */
     justify-content: flex-start;
+    flex-wrap: wrap;
+    /* center horizontally */
+    align-content: space-around;
+
     line-height: unset;
 }
 
@@ -22,12 +26,14 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    width: var(--tableWidthRatio, 100%);
 }
 
 .waiting {
     display: flex;
     flex-grow: 1;
     align-items: center;
+    text-align: center;
 }
 
 .video {
