--- a/shared/src/main/resources/css/nogrid/results.css
+++ b/shared/src/main/resources/css/nogrid/results.css
@@ -14,8 +14,12 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    flex-wrap: no-wrap;
+    /* move to top */
     justify-content: flex-start;
+    flex-wrap: wrap;
+    /* center horizontally */
+    align-content: space-around;
+
     line-height: unset;
 }
 
@@ -23,6 +27,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    width: var(--tableWidthRatio, 100%);
 }
 
 .waiting {
